--- a/snake/snake.html
+++ b/snake/snake.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <canvas width="400px" height="400px" id="game"></canvas>
+        <canvas id="game" width="400px" height="400px"></canvas>
     </div>
     <script src="snake.js"></script>
 </body>
