--- a/snake/snake.html
+++ b/snake/snake.html
@@ -12,6 +12,12 @@
     <div>
         <canvas id="game" width="400px" height="400px"></canvas>
     </div>
+    <aside>
+        <p id="score">Length: 1</p>
+        <input type="button" value="Start" onclick="resume()">
+        <input type="button" value="Stop" onclick="stop()">
+        <input type="button" value="Auto" onclick="auto()">
+    </aside>
     <script src="snake.js"></script>
 </body>
 </html>
